2006-09-24  Michael Riepe  <too-tired@users.sourceforge.net>

	* Updated ChangeLog ;-)

	* Added configurable jog slider patch from Ralph Glasstetter.

2006-09-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* Added more configuration settings.

2006-09-22  Michael Riepe  <too-tired@users.sourceforge.net>

	* Made mouse wheel resolution configurable.

2006-09-21  Michael Riepe  <too-tired@users.sourceforge.net>

	* Added selectable resolutions for the mouse wheel (via
	modifier keys).

2006-09-18  Michael Riepe  <too-tired@users.sourceforge.net>

	* Fixed yesterday's patch. The messages should be gone now.

2006-09-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* Modified the indexer to suppress most "inconsistent video
	PTS (-1696)" message.

2006-09-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* Added all existing bug fixes from http://www.mr511.de/dvbcut.

2005-12-16  Sven Over  <svenover@svenover.de>

	* Release 0.5.3.

2005-12-15  Sven Over  <svenover@svenover.de>

	* Important bug fixes in the DVBCUT muxer.

	* Fixed a bug in the audio player function, which caused no audio to
	be played in certain situations.

	* Fixed a bug in saving the index file, which caused an "Invalid index
	file" error when loading the index.

	* New items in the "View" menu: "Full size", "Half size" and "Quarter
	Size". Also added a "-geometry" option with the correct display size
	to the command line when spawning the embedded MPlayer.

	* The DVBCUT muxer is now available in two variants: apart from the
	one which creates DVD compliant (well, hopefully) program streams,
	there is now also one for plain program streams. The latter has no
	fixed pack size (DVD demands 2048 bytes fixed pack size), and no
	special placeholder packs for DVD navigation data. (Tech note: audio
	buffers are as big as 49152 bytes, as opposed to 4096 in the DVBCUT
	DVD muxer. This is to circumvent problems because of the very big